--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           </p>
         </blockquote>
         <p>Mario Rossi</p>
-        <p>CEO, Epicode</p>
+        <p class="p1">CEO, Epicode</p>
       </section>
       <section id="section4">
         <div class="card">
