correzioni parte mobile e fine esercizio extra

--- a/index-desktop.html
+++ b/index-desktop.html
@@ -112,11 +112,10 @@
           ><span class="material-symbols-outlined"> mail </span>
           info@epicode.school</a
         >
-        <p>
+        <p class="linea">
           <span class="material-symbols-outlined"> arrow_outward </span> Via
           Appia1 - 00100 Roma (RM)
         </p>
-        <hr class="spazio" />
         <p class="p1">
           &copy;2021. Immagini di
           <a class="p1" href="http://pixabay.com/it/" target="_blank"
